--- a/1.0.Python内置类型性能分析.md
+++ b/1.0.Python内置类型性能分析.md
@@ -19,10 +19,10 @@ timeit.Timer.timeit(number=1000000)
 Timer类中测试语句执行速度的对象方法。number参数是测试代码时的测试次数，默认为1000000次。方法返回执行代码的平均耗时，一个float类型的秒数。
 
 # list内置操作的时间复杂度
-![1.0](./1.0.png)
+![1.0](image/1.0.png)
 
 # dict内置操作的时间复杂度
-![1.1](1.1.png)
+![1.1](image/1.1.png)
 
 ## Python的内置数据结构
 Python给我们提供了很多现成的数据结构类型，这些系统自己定义好的，不需要我们自己去定义的数据结构叫做Python的内置数据结构，比如列表、元组、字典。
