--- a/5.0.排序算法.md
+++ b/5.0.排序算法.md
@@ -17,4 +17,7 @@
 
 不稳定排序算法可能会在相等的键值中改变纪录的相对次序，但是稳定排序算法从来不会如此。不稳定排序算法可以被特别地实现为稳定。作这件事情的一个方式是人工扩充键值的比较，如此在其他方面相同键值的两个对象间之比较，（比如上面的比较中加入第二个标准：第二个键值的大小）就会被决定使用在原先数据次序中的条目，当作一个同分决赛。然而，要记住这种次序通常牵涉到额外的空间负担。
 
+# 常见排序算法效率比较
+
+![5.0](image/5.0.png)
 
